[package]
name = "library_app"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
google-calendar3 = "5.0.2+20221229.14"
hyper-tls = "0.5"  
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2"
hyper = "0.14"
hyper-rustls = "0.22"
yup-oauth2 = "5.0.0"

extern crate hyper;
extern crate hyper_rustls;
extern crate yup_oauth2;
    